--- a/Tp_Binding/src/main/resources/com/example/tp_binding/hello-view.fxml
+++ b/Tp_Binding/src/main/resources/com/example/tp_binding/hello-view.fxml
@@ -6,12 +6,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
 <VBox fx:id="HelloController" alignment="CENTER" prefHeight="472.0" prefWidth="857.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tp_binding.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <Circle fx:id="circle" fill="DODGERBLUE" radius="67.0" stroke="BLACK" strokeType="INSIDE" />
    <AnchorPane id="largeur" prefHeight="200.0" prefWidth="200.0">
       <children>
          <TextField id="perimetre" fx:id="perimetre" layoutX="612.0" layoutY="43.0" />
@@ -22,7 +24,7 @@
          <TextField id="largeur" fx:id="largeur" layoutX="42.0" layoutY="139.0" />
          <Slider fx:id="slider_Hauteur" layoutX="21.0" layoutY="10.0" orientation="VERTICAL" prefHeight="65.0" prefWidth="14.0" />
          <Slider fx:id="slider_Largeur" layoutX="21.0" layoutY="135.0" orientation="VERTICAL" prefHeight="59.0" prefWidth="14.0" />
+         <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" layoutX="394.0" layoutY="160.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
       </children>
    </AnchorPane>
-   <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
 </VBox>
